Import of ELIZABETH/ogd-0.03 from CPAN.
gitpan-cpan-distribution: ogd
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ELIZABETH/ogd-0.03.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,6 +3,9 @@ README for ogd
 This module adds ordered destruction of object in LIFO order during global
 destruction.
 
+Version:
+ 0.03
+
 Required Modules:
  B (any)
  Scalar::Util (any)
