--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.03	31 March 2012
+	Added some pod.  Made sure it runs with 5.14.2, threaded and unthreaded.
+
 0.02	4 December 2004
 	Added a real test-suite.
 
